include/grass/defs/gis.h

void G_list_color_rules_description_type(FILE *, char *);
int G_find_color_rule(const char *);
/* color_str.c */
int G_num_standard_colors(void);
/* commas.c */
int G_insert_commas(char *);
void G_remove_commas(char *);
/* compress.c */
int G_compressor_number(char *);
char *G_compressor_name(int);
int G_default_compressor(void);
int G_check_compressor(int);
int G_write_compressed(int, unsigned char *, int, int);
int G_read_compressed(int, int, unsigned char *, int, int);
int G_compress_bound(int, int);
int G_compress(unsigned char *, int, unsigned char *, int, int);
int G_expand(unsigned char *, int, unsigned char *, int, int);
/* compress.c : no compression */
int G_no_compress(unsigned char *src, int src_sz, unsigned char *dst,
                  int dst_sz);
int G_no_expand(unsigned char *src, int src_sz, unsigned char *dst, int dst_sz);
/* cmprrle.c : Run Length Encoding (RLE) */
int G_rle_compress(unsigned char *src, int src_sz, unsigned char *dst,
                   int dst_sz);
int G_rle_expand(unsigned char *src, int src_sz, unsigned char *dst,
                 int dst_sz);
/* cmprzlib.c : ZLIB's DEFLATE */
int G_zlib_compress(unsigned char *src, int src_sz, unsigned char *dst,
                    int dst_sz);
int G_zlib_expand(unsigned char *src, int src_sz, unsigned char *dst,
                  int dst_sz);
/* cmprlz4.c : LZ4, extremely fast */
int G_lz4_compress(unsigned char *src, int src_sz, unsigned char *dst,
                   int dst_sz);
int G_lz4_expand(unsigned char *src, int src_sz, unsigned char *dst,
                 int dst_sz);
/* cmprbzip.c : BZIP2, high compression, faster than ZLIB's DEFLATE with level 9
 */
int G_bz2_compress(unsigned char *src, int src_sz, unsigned char *dst,
                   int dst_sz);
int G_bz2_expand(unsigned char *src, int src_sz, unsigned char *dst,
                 int dst_sz);
/* cmprzstd.c : ZSTD, compression similar to ZLIB's DEFLATE but faster */
int G_zstd_compress(unsigned char *src, int src_sz, unsigned char *dst,
                    int dst_sz);
int G_zstd_expand(unsigned char *src, int src_sz, unsigned char *dst,
                  int dst_sz);
/* add more compression methods here */

/* copy_dir.c */
int G_recursive_copy(const char *, const char *);
/* copy_file.c */
int G_copy_file(const char *, const char *);
/* counter.c */
int G_is_initialized(int *);
void G_initialize_done(int *);
void G_init_counter(struct Counter *, int);
int G_counter_next(struct Counter *);
/* date.c */
const char *G_date(void);
/* datum.c */
int G_get_datum_by_name(const char *);
const char *G_datum_name(int);
const char *G_datum_description(int);
const char *G_datum_ellipsoid(int);
int G_get_datumparams_from_projinfo(const struct Key_Value *, char *, char *);
void G_read_datum_table(void);
/* debug.c */
void G_init_debug(void);
int G_debug(int, const char *, ...) __attribute__((format(printf, 2, 3)));
/* distance.c */
int G_begin_distance_calculations(void);