dist.x86_64-pc-linux-gnu/etc/python/grass/lib/gis.py


# include/grass/defs/gis.h: 180
if _libs["grass_gis.8.5"].has("G_list_color_rules_description_type", "cdecl"):
    G_list_color_rules_description_type = _libs["grass_gis.8.5"].get(
        "G_list_color_rules_description_type", "cdecl"
    )
    G_list_color_rules_description_type.argtypes = [POINTER(FILE), String]
    G_list_color_rules_description_type.restype = None

# include/grass/defs/gis.h: 181
if _libs["grass_gis.8.5"].has("G_find_color_rule", "cdecl"):
    G_find_color_rule = _libs["grass_gis.8.5"].get("G_find_color_rule", "cdecl")
    G_find_color_rule.argtypes = [String]
    G_find_color_rule.restype = c_int

# include/grass/defs/gis.h: 184
if _libs["grass_gis.8.5"].has("G_num_standard_colors", "cdecl"):
    G_num_standard_colors = _libs["grass_gis.8.5"].get("G_num_standard_colors", "cdecl")
    G_num_standard_colors.argtypes = []
    G_num_standard_colors.restype = c_int

# include/grass/defs/gis.h: 187
if _libs["grass_gis.8.5"].has("G_insert_commas", "cdecl"):
    G_insert_commas = _libs["grass_gis.8.5"].get("G_insert_commas", "cdecl")
    G_insert_commas.argtypes = [String]
    G_insert_commas.restype = c_int

# include/grass/defs/gis.h: 188
if _libs["grass_gis.8.5"].has("G_remove_commas", "cdecl"):
    G_remove_commas = _libs["grass_gis.8.5"].get("G_remove_commas", "cdecl")
    G_remove_commas.argtypes = [String]
    G_remove_commas.restype = None

# include/grass/defs/gis.h: 191
if _libs["grass_gis.8.5"].has("G_compressor_number", "cdecl"):
    G_compressor_number = _libs["grass_gis.8.5"].get("G_compressor_number", "cdecl")
    G_compressor_number.argtypes = [String]
    G_compressor_number.restype = c_int

# include/grass/defs/gis.h: 192
if _libs["grass_gis.8.5"].has("G_compressor_name", "cdecl"):
    G_compressor_name = _libs["grass_gis.8.5"].get("G_compressor_name", "cdecl")
    G_compressor_name.argtypes = [c_int]
    if sizeof(c_int) == sizeof(c_void_p):
        G_compressor_name.restype = ReturnString
    else:
        G_compressor_name.restype = String
        G_compressor_name.errcheck = ReturnString

# include/grass/defs/gis.h: 193
if _libs["grass_gis.8.5"].has("G_default_compressor", "cdecl"):
    G_default_compressor = _libs["grass_gis.8.5"].get("G_default_compressor", "cdecl")
    G_default_compressor.argtypes = []
    G_default_compressor.restype = c_int

# include/grass/defs/gis.h: 194
if _libs["grass_gis.8.5"].has("G_check_compressor", "cdecl"):
    G_check_compressor = _libs["grass_gis.8.5"].get("G_check_compressor", "cdecl")
    G_check_compressor.argtypes = [c_int]
    G_check_compressor.restype = c_int

# include/grass/defs/gis.h: 195
if _libs["grass_gis.8.5"].has("G_write_compressed", "cdecl"):
    G_write_compressed = _libs["grass_gis.8.5"].get("G_write_compressed", "cdecl")
    G_write_compressed.argtypes = [c_int, POINTER(c_ubyte), c_int, c_int]
    G_write_compressed.restype = c_int

# include/grass/defs/gis.h: 196
for _lib in _libs.values():
    if not _lib.has("G_write_unompressed", "cdecl"):
        continue
    G_write_unompressed = _lib.get("G_write_unompressed", "cdecl")
    G_write_unompressed.argtypes = [c_int, POINTER(c_ubyte), c_int]
    G_write_unompressed.restype = c_int
    break

# include/grass/defs/gis.h: 197
if _libs["grass_gis.8.5"].has("G_read_compressed", "cdecl"):
    G_read_compressed = _libs["grass_gis.8.5"].get("G_read_compressed", "cdecl")
    G_read_compressed.argtypes = [c_int, c_int, POINTER(c_ubyte), c_int, c_int]
    G_read_compressed.restype = c_int

# include/grass/defs/gis.h: 198
if _libs["grass_gis.8.5"].has("G_compress_bound", "cdecl"):
    G_compress_bound = _libs["grass_gis.8.5"].get("G_compress_bound", "cdecl")
    G_compress_bound.argtypes = [c_int, c_int]
    G_compress_bound.restype = c_int

# include/grass/defs/gis.h: 199
if _libs["grass_gis.8.5"].has("G_compress", "cdecl"):
    G_compress = _libs["grass_gis.8.5"].get("G_compress", "cdecl")
    G_compress.argtypes = [POINTER(c_ubyte), c_int, POINTER(c_ubyte), c_int, c_int]
    G_compress.restype = c_int

# include/grass/defs/gis.h: 200
if _libs["grass_gis.8.5"].has("G_expand", "cdecl"):
    G_expand = _libs["grass_gis.8.5"].get("G_expand", "cdecl")
    G_expand.argtypes = [POINTER(c_ubyte), c_int, POINTER(c_ubyte), c_int, c_int]
    G_expand.restype = c_int

# include/grass/defs/gis.h: 203
if _libs["grass_gis.8.5"].has("G_no_compress", "cdecl"):
    G_no_compress = _libs["grass_gis.8.5"].get("G_no_compress", "cdecl")
    G_no_compress.argtypes = [POINTER(c_ubyte), c_int, POINTER(c_ubyte), c_int]
    G_no_compress.restype = c_int

# include/grass/defs/gis.h: 205
if _libs["grass_gis.8.5"].has("G_no_expand", "cdecl"):
    G_no_expand = _libs["grass_gis.8.5"].get("G_no_expand", "cdecl")
    G_no_expand.argtypes = [POINTER(c_ubyte), c_int, POINTER(c_ubyte), c_int]
    G_no_expand.restype = c_int

# include/grass/defs/gis.h: 208
if _libs["grass_gis.8.5"].has("G_rle_compress", "cdecl"):
    G_rle_compress = _libs["grass_gis.8.5"].get("G_rle_compress", "cdecl")
    G_rle_compress.argtypes = [POINTER(c_ubyte), c_int, POINTER(c_ubyte), c_int]
    G_rle_compress.restype = c_int

# include/grass/defs/gis.h: 210
if _libs["grass_gis.8.5"].has("G_rle_expand", "cdecl"):
    G_rle_expand = _libs["grass_gis.8.5"].get("G_rle_expand", "cdecl")
    G_rle_expand.argtypes = [POINTER(c_ubyte), c_int, POINTER(c_ubyte), c_int]
    G_rle_expand.restype = c_int

# include/grass/defs/gis.h: 214
if _libs["grass_gis.8.5"].has("G_zlib_compress", "cdecl"):
    G_zlib_compress = _libs["grass_gis.8.5"].get("G_zlib_compress", "cdecl")
    G_zlib_compress.argtypes = [POINTER(c_ubyte), c_int, POINTER(c_ubyte), c_int]
    G_zlib_compress.restype = c_int

# include/grass/defs/gis.h: 216
if _libs["grass_gis.8.5"].has("G_zlib_expand", "cdecl"):
    G_zlib_expand = _libs["grass_gis.8.5"].get("G_zlib_expand", "cdecl")
    G_zlib_expand.argtypes = [POINTER(c_ubyte), c_int, POINTER(c_ubyte), c_int]
    G_zlib_expand.restype = c_int

# include/grass/defs/gis.h: 220
if _libs["grass_gis.8.5"].has("G_lz4_compress", "cdecl"):
    G_lz4_compress = _libs["grass_gis.8.5"].get("G_lz4_compress", "cdecl")
    G_lz4_compress.argtypes = [POINTER(c_ubyte), c_int, POINTER(c_ubyte), c_int]
    G_lz4_compress.restype = c_int

# include/grass/defs/gis.h: 222
if _libs["grass_gis.8.5"].has("G_lz4_expand", "cdecl"):
    G_lz4_expand = _libs["grass_gis.8.5"].get("G_lz4_expand", "cdecl")
    G_lz4_expand.argtypes = [POINTER(c_ubyte), c_int, POINTER(c_ubyte), c_int]
    G_lz4_expand.restype = c_int

# include/grass/defs/gis.h: 227
if _libs["grass_gis.8.5"].has("G_bz2_compress", "cdecl"):
    G_bz2_compress = _libs["grass_gis.8.5"].get("G_bz2_compress", "cdecl")
    G_bz2_compress.argtypes = [POINTER(c_ubyte), c_int, POINTER(c_ubyte), c_int]
    G_bz2_compress.restype = c_int

# include/grass/defs/gis.h: 229
if _libs["grass_gis.8.5"].has("G_bz2_expand", "cdecl"):
    G_bz2_expand = _libs["grass_gis.8.5"].get("G_bz2_expand", "cdecl")
    G_bz2_expand.argtypes = [POINTER(c_ubyte), c_int, POINTER(c_ubyte), c_int]
    G_bz2_expand.restype = c_int

# include/grass/defs/gis.h: 233
if _libs["grass_gis.8.5"].has("G_zstd_compress", "cdecl"):
    G_zstd_compress = _libs["grass_gis.8.5"].get("G_zstd_compress", "cdecl")
    G_zstd_compress.argtypes = [POINTER(c_ubyte), c_int, POINTER(c_ubyte), c_int]
    G_zstd_compress.restype = c_int

# include/grass/defs/gis.h: 235
if _libs["grass_gis.8.5"].has("G_zstd_expand", "cdecl"):
    G_zstd_expand = _libs["grass_gis.8.5"].get("G_zstd_expand", "cdecl")
    G_zstd_expand.argtypes = [POINTER(c_ubyte), c_int, POINTER(c_ubyte), c_int]
    G_zstd_expand.restype = c_int

# include/grass/defs/gis.h: 241
if _libs["grass_gis.8.5"].has("G_recursive_copy", "cdecl"):
    G_recursive_copy = _libs["grass_gis.8.5"].get("G_recursive_copy", "cdecl")
    G_recursive_copy.argtypes = [String, String]
    G_recursive_copy.restype = c_int

# include/grass/defs/gis.h: 244
if _libs["grass_gis.8.5"].has("G_copy_file", "cdecl"):
    G_copy_file = _libs["grass_gis.8.5"].get("G_copy_file", "cdecl")
    G_copy_file.argtypes = [String, String]
    G_copy_file.restype = c_int

# include/grass/defs/gis.h: 247
if _libs["grass_gis.8.5"].has("G_is_initialized", "cdecl"):
    G_is_initialized = _libs["grass_gis.8.5"].get("G_is_initialized", "cdecl")
    G_is_initialized.argtypes = [POINTER(c_int)]
    G_is_initialized.restype = c_int

# include/grass/defs/gis.h: 248
if _libs["grass_gis.8.5"].has("G_initialize_done", "cdecl"):
    G_initialize_done = _libs["grass_gis.8.5"].get("G_initialize_done", "cdecl")
    G_initialize_done.argtypes = [POINTER(c_int)]
    G_initialize_done.restype = None

# include/grass/defs/gis.h: 249
if _libs["grass_gis.8.5"].has("G_init_counter", "cdecl"):
    G_init_counter = _libs["grass_gis.8.5"].get("G_init_counter", "cdecl")
    G_init_counter.argtypes = [POINTER(struct_Counter), c_int]
    G_init_counter.restype = None

# include/grass/defs/gis.h: 250
if _libs["grass_gis.8.5"].has("G_counter_next", "cdecl"):
    G_counter_next = _libs["grass_gis.8.5"].get("G_counter_next", "cdecl")
    G_counter_next.argtypes = [POINTER(struct_Counter)]
    G_counter_next.restype = c_int

# include/grass/defs/gis.h: 253
if _libs["grass_gis.8.5"].has("G_date", "cdecl"):
    G_date = _libs["grass_gis.8.5"].get("G_date", "cdecl")
    G_date.argtypes = []
    G_date.restype = c_char_p

# include/grass/defs/gis.h: 256
if _libs["grass_gis.8.5"].has("G_get_datum_by_name", "cdecl"):
    G_get_datum_by_name = _libs["grass_gis.8.5"].get("G_get_datum_by_name", "cdecl")
    G_get_datum_by_name.argtypes = [String]
    G_get_datum_by_name.restype = c_int

# include/grass/defs/gis.h: 257
if _libs["grass_gis.8.5"].has("G_datum_name", "cdecl"):
    G_datum_name = _libs["grass_gis.8.5"].get("G_datum_name", "cdecl")
    G_datum_name.argtypes = [c_int]
    G_datum_name.restype = c_char_p

# include/grass/defs/gis.h: 258
if _libs["grass_gis.8.5"].has("G_datum_description", "cdecl"):
    G_datum_description = _libs["grass_gis.8.5"].get("G_datum_description", "cdecl")
    G_datum_description.argtypes = [c_int]
    G_datum_description.restype = c_char_p

# include/grass/defs/gis.h: 259
if _libs["grass_gis.8.5"].has("G_datum_ellipsoid", "cdecl"):
    G_datum_ellipsoid = _libs["grass_gis.8.5"].get("G_datum_ellipsoid", "cdecl")
    G_datum_ellipsoid.argtypes = [c_int]
    G_datum_ellipsoid.restype = c_char_p

# include/grass/defs/gis.h: 260
if _libs["grass_gis.8.5"].has("G_get_datumparams_from_projinfo", "cdecl"):
    G_get_datumparams_from_projinfo = _libs["grass_gis.8.5"].get(
        "G_get_datumparams_from_projinfo", "cdecl"
    )
    G_get_datumparams_from_projinfo.argtypes = [
        POINTER(struct_Key_Value),
        String,
        String,
    ]
    G_get_datumparams_from_projinfo.restype = c_int

# include/grass/defs/gis.h: 261
if _libs["grass_gis.8.5"].has("G_read_datum_table", "cdecl"):
    G_read_datum_table = _libs["grass_gis.8.5"].get("G_read_datum_table", "cdecl")
    G_read_datum_table.argtypes = []
    G_read_datum_table.restype = None

# include/grass/defs/gis.h: 264
if _libs["grass_gis.8.5"].has("G_init_debug", "cdecl"):
    G_init_debug = _libs["grass_gis.8.5"].get("G_init_debug", "cdecl")
    G_init_debug.argtypes = []
    G_init_debug.restype = None

# include/grass/defs/gis.h: 265
if _libs["grass_gis.8.5"].has("G_debug", "cdecl"):
    _func = _libs["grass_gis.8.5"].get("G_debug", "cdecl")
    _restype = c_int
    _errcheck = None
    _argtypes = [c_int, String]
    G_debug = _variadic_function(_func, _restype, _argtypes, _errcheck)

# include/grass/defs/gis.h: 268
if _libs["grass_gis.8.5"].has("G_begin_distance_calculations", "cdecl"):
    G_begin_distance_calculations = _libs["grass_gis.8.5"].get(
        "G_begin_distance_calculations", "cdecl"
    )
    G_begin_distance_calculations.argtypes = []
    G_begin_distance_calculations.restype = c_int
